@@ -497,6 +497,12 @@
     <dd>Replace &quot;new&quot; with &quot;::new&quot;.
     </dd>
 
+    <dt><a href="lwg-active.html#434">434</a>:
+        <em>bitset::to_string() hard to use</em>
+    </dt>
+    <dd>Add three overloads, taking fewer template arguments.
+    </dd>
+
     <dt><a href="lwg-active.html#453">453</a>:
         <em>basic_stringbuf::seekoff need not always fail for an empty stream</em>
     </dt>
